BSC Token to RoverChain bridge

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									<li><a class="n-link-8" href="javascript:void(0)" value="ChainsTb">Chains</a></li>
 									<!-- <li><a class="n-link-12 special_nav Textfadehome" href="javascript:void(0)" value="Team">Team</a>
 									</li> -->
-									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">BSC Token</a></li>
+									<li><a class="n-link-9" href="javascript:void(0)" value="TokenTb">Token</a></li>
 									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="AirdropTb">Airdrop</a></li>
 
 									<!-- <li><a class="n-link-10 special_nav Textfadehome" href="javascript:void(0)" value="LmTb">LM</a>
@@ -703,7 +703,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 					<div class="container">
 						<div class="row row-eq-height flex-xs-column-reverse">
 							<div class="col-md-6 align-self-center text-left text-white wow fadeInUp mt-md-0 mt-5">
-								<h1 class="wow fadeInUp"><span>BSC Token</span></h1>
+								<h1 class="wow fadeInUp"><span>	Token</span></h1>
 								<h2 class="wow fadeInUp">Supply</h2>
 								<ul class="wow fadeInUp text-white  text-left">
 									<li>1Q - 50% burned</li>
@@ -714,7 +714,9 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								</ul>
 								<h2 class="wow fadeInUp">Utility</h2>
 								<p>RTR combines rovlection tokenomics with revenue from RoverLand -- a total DeFi & NFT stack. Rovflection adds liqudity to DEX & awards RTR to every holder, at every transaction, as explained in supply. Value = Tokenomics * Platform, and Rover is combining the best of both, for quadratic value</p>
-
+								<h2 class="wow fadeInUp">Chain</h2>
+								<p>The initial BSC Token can be bridged, via Ethereum, to our own chain when launched</p>
+							
 								<div class="banner-header-button wow fadeInUp">
 									<a class="button" href="javascript:void(0)" data-toggle="modal"
 										data-target="#exampleModal" download value="TokenGn">Get
@@ -828,7 +830,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 									<li><a class="n-link-7" href="javascript:void(0)" value="NFT">NFT</a></li>
 									<li><a class="n-link-8" href="javascript:void(0)" value="Chains">Chains</a></li>
 									<!-- <li><a class="n-link-12" href="javascript:void(0)" value="Team">Team</a></li> -->
-									<li><a class="n-link-9" href="javascript:void(0)" value="Token">BSC Token</a></li>
+									<li><a class="n-link-9" href="javascript:void(0)" value="Token">Token</a></li>
 									<li><a class="n-link-Airdrop" href="javascript:void(0)" value="Airdrop">Airdrop</a></li>
 									<!-- <li><a class="n-link-10" href="javascript:void(0)" value="LM">LM</a></li>
 									<li><a class="n-link-11" href="javascript:void(0)" value="LGE">LGE</a></li> -->
