fadeUpIn RTR top info

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 																value="TopGn" download>Get
 																Notified!</a>
 													</div>
-													<div class="h5" style="color:white;">
+													<div class="h5 wow fadeInUp" style="color:white;">
 													RTR - Rover Tx Rewards every tx:<br>
 													5% goes to every holder wallet<br>
 													5% to rug-proof ownerless pool<br>
