bounty bonus month 4

--- a/index.html
+++ b/index.html
@@ -743,6 +743,7 @@ Rover combines the best of platform revenue & tokenomics.</p>
 								<h1 class="wow fadeInUp"><span>Airdrop & Bounty</span></h1>
 								<h2 class="wow fadeInUp">Bonus: 2x Tokens</h2>
 								<p>Get bonus for buys on days 1-4: 100% 75% 50% 25%</p>
+								<p>Bonus on month 4</p>
 								<h2 class="wow fadeInUp">Bounty</h2>
 								<p>Earn $10 + $10 per referral via our SweepWidget (link coming soon)</p>
 								<h2 class="wow fadeInUp">Airdrop</h2>
