--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 0.7;">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
 														<!-- <br> -->
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improving on the OHM Bond Model</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improvement on the OHM Bond Model</div>
 														<br>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Jan 18 Fair Launch</div>
 														<!-- <div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 20px">Bonus for early buys on days 1-4:</div>
