--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 				<div class="container">
 					<div class="navbar-header">
 						<a class="logo-main" href="index.html" value="Home">
-							<span class="logo-main-dark"><img src="images/roverdao.png"
+							<span class="logo-main-dark"><img src="images/roverland.png"
 									alt="RoverDAO " /></span>
-							<span class="logo-main-light"><img src="images/roverdao.png"
+							<span class="logo-main-light"><img src="images/roverland.png"
 									alt="RoverDAO" /></span>
 						</a>
 						<a type="button" class="nav-toggle nav-trigger" value="Navigation">
