--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 			<div id="bg-wrapper"></div>
 
 			<!-- <canvas id="bgCanvas"></canvas> -->
-			<div id="navbar" style="">
+			<div id="navbar">
 				<div class="container">
 					<div class="navbar-header">
 						<a class="logo-main" href="index.html" value="Home">
-							<span class="logo-main-dark"><img src="images/roverland.png"
+							<span class="logo-main-dark"><img src="images/roverdao.png"
 									alt="RoverDAO " /></span>
-							<span class="logo-main-light"><img src="images/roverland.png"
+							<span class="logo-main-light"><img src="images/roverdao.png"
 									alt="RoverDAO" /></span>
 						</a>
 						<a type="button" class="nav-toggle nav-trigger" value="Navigation">
