rovershades in popup

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 							<span class="logo-main-light"><img src="images/roverdao.png"
 									alt="RoverDAO" /></span>
 						</a>
+
+						<p class="landing-header-nav-text">Social</p>
+
 						<a type="button" class="nav-toggle nav-trigger" value="Navigation">
 							<div class="nav-icon"><span></span></div>
 						</a>
@@ -271,7 +274,7 @@
 			<div class="modal-body">
 				<div class=row>
 					<div class="col-md-6">
-						<img src="images/rovershades.jpg">
+						<img src="images/rovershades.png">
 					</div>
 					<div class="col-md-6" style="display: grid; align-items: center;">
 
