--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
 									alt="RoverDAO" /></span>
 						</a>
 
-						<p class="landing-header-nav-text">Social</p>
-
 						<a type="button" class="nav-toggle nav-trigger" value="Navigation">
 							<div class="nav-icon"><span></span></div>
 						</a>
@@ -266,7 +264,7 @@
 			<!-- <div class="modal-content" style="background-image: url('images/hexagon.jpg'); background-repeat: no-repeat; -->
 		  <!-- background-size: cover;"> -->
 			<div class="modal-header">
-			  <h5 class="modal-title">Get Notified</h5>
+			  <h5 class="modal-title" style="margin-left:30%;">Get Notified</h5>
 			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				<span aria-hidden="true">&times;</span>
 			  </button>
