--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 																data-target="#exampleModal"
 																value="TopGn" download>Get</a>
 														</div>
-														<div class="banner-header-button wow fadeInUp buttonresonsive">
+														<!-- <div class="banner-header-button wow fadeInUp buttonresonsive">
 															<a class="button" href="https://google.com"	target="_blank" style="color:black; margin:5px;"
 																value="TopGn" download>Docs</a>		
-														</div>								
+														</div>								 -->
 												    </div>
 
 													<div class="h5 wow fadeInUp" style="color:white;">
