--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
 									alt="RoverDAO" /></span>
 						</a>
 
-						<a type="button" class="nav-toggle nav-trigger" value="Navigation">
+						<div class="banner-header-button wow fadeInUp buttonresonsive" style="margin-left: auto; margin-right:0x;">	
+							<a class="button" href="javascript:void(0)" data-toggle="modal" style="margin:5px; background-color:black; color:white"
+								data-target="#exampleModal"
+								value="TopGn" download>Socials</a>
+						</div>
+						
+						<!-- <a type="button" class="nav-toggle nav-trigger" value="Navigation">
 							<div class="nav-icon"><span></span></div>
 						</a>
 						<div class="nav-wrap">
@@ -128,7 +134,7 @@
 									</li>
 								</ul>
 							</nav>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>			
