--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									alt="RoverDAO" /></span>
 						</a>
 
-						<div class="banner-header-button wow fadeInUp buttonresonsive" style="margin-left: auto; margin-right:0x;">	
+						<div class="banner-header-button wow fadeInUp buttonresonsive" style="margin-left: auto; margin-right:0x; margin-top:10px;">	
 							<a class="button" href="javascript:void(0)" data-toggle="modal" style="margin:5px; background-color:black; color:white"
 								data-target="#exampleModal"
 								value="TopGn" download>Socials</a>
