--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 										title="Twitter"><i class="fab fa-twitter"></i></a>
 									</li>
-									<li><a href="https://discord.com/invite/T5CmEjdh" target="_blank" value="StbDiscord"
+									<li><a href="https://discord.gg/hWXY4U6V" target="_blank" value="StbDiscord"
 										title="Discord"><i class="fab fa-discord"></i></a>
 									</li>
 									<li><a href="https://github.com/RoverCapital/ROVER-FETCH-PRODUCTION" target="_blank" value="StbTgChat"
@@ -153,16 +153,16 @@
 											<div class="banner-header text-center ">
 												<div class="banner-header-title">
 													<div class="banner-main-top">
-														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 0.9;"
+														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 1;"
 															data-wow-duration="2s">DeFi 3.0<br>Ecosystem</h1>
 															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
-														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 0.7;"
+														<h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 1;"
 															data-wow-duration="2s">
 															Uni<span class="Textfadehome fied">fied</span> in One
 															<span class="Textfadehome coinn">Coin</span>
 														</h2>
-														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 0.7;">
+														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">
 															Simpli<span class="Textfadehome" >fied</span> in One <span class="Textfadehome">Click</span></h2>
 														<!-- <br> -->
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improvement on the OHM Bond Model</div>
@@ -286,7 +286,7 @@
 							<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 								title="Twitter"><i class="fab fa-twitter" style="padding-bottom: 10px;"></i></i></a>
 							</li>
-							<li><a href="https://discord.com/invite/T5CmEjdh" target="_blank" value="StbDiscord"
+							<li><a href="https://discord.gg/hWXY4U6V" target="_blank" value="StbDiscord"
 								title="Discord"><i class="fab fa-discord" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<li><a href="https://github.com/RoverCapital/ROVER-FETCH-PRODUCTION" target="_blank" value="StbTgChat"
