--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 										title="Twitter"><i class="fab fa-twitter"></i></a>
 									</li>
-									<li><a href="https://discord.gg/hWXY4U6V" target="_blank" value="StbDiscord"
+									<li><a href="https://discord.gg/nNZh6nxx" target="_blank" value="StbDiscord"
 										title="Discord"><i class="fab fa-discord"></i></a>
 									</li>
 									<li><a href="https://github.com/RoverCapital/ROVER-FETCH-PRODUCTION" target="_blank" value="StbTgChat"
@@ -286,7 +286,7 @@
 							<li><a href="https://twitter.com/RoverDAOcom" target="_blank" value="StbTw"
 								title="Twitter"><i class="fab fa-twitter" style="padding-bottom: 10px;"></i></i></a>
 							</li>
-							<li><a href="https://discord.gg/hWXY4U6V" target="_blank" value="StbDiscord"
+							<li><a href="https://discord.gg/nNZh6nxx" target="_blank" value="StbDiscord"
 								title="Discord"><i class="fab fa-discord" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<li><a href="https://github.com/RoverCapital/ROVER-FETCH-PRODUCTION" target="_blank" value="StbTgChat"
@@ -305,7 +305,7 @@
 								target="_blank" value="StbYt" title="YouTube"><i
 								class="fab fa-youtube" style="padding-bottom: 10px;"></i></i></a>
 							</li>
-							<li><a href="https://t.me/RoverChat" target="_blank" value="StbTgChat"
+							<li><a href="https://t.me/RoverDAO" target="_blank" value="StbTgChat"
 								title="TelegramChat"><i class="fab fa-telegram-plane" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<br>
