rovershades margin-top -100px

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 						<div class="banner-text-wrap">
 							<div class="container d-block">
 								<div id="aboveVideo" class="row row-eq-height animate">
-									<div id="HalWSB" class="col-md-7 align-self-md-start align-self-start">
+									<div id="HalWSB" class="col-md-7 align-self-md-start align-self-start" style="margin-top: -100px;">
 										<img class="fadeInUp" src="images/rovershades.png" alt="" />
 									</div>
 									<div id="topText" class="col-md-5 align-self-md-start">
