--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 						<div class="banner-text-wrap">
 							<div class="container d-block">
 								<div id="aboveVideo" class="row row-eq-height animate">
-									<div id="HalWSB" class="col-md-7 align-self-md-start align-self-start" style="margin-top: -80px;">
+									<div id="HalWSB" class="col-md-7 align-self-md-start align-self-start" style="margin-top: 0px;">
 										<img class="fadeInUp" src="images/rovershades.png" alt="" />
 									</div>
 									<div id="topText" class="col-md-5 align-self-md-start">
@@ -314,18 +314,16 @@
 
 			</div>
 		</div>
-		<div class="modal-footer">
-			  <!-- <button type="button" class="btn btn-primary">Save changes</button>
-			  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+		<!-- <div class="modal-footer">
 			</div>
 		  </div>
-		</div>
+		</div> -->
 	  </div>
 
-	<script>
+	<!-- <script>
 		//wow-animation
 		new WOW().init();
-	</script>
+	</script> -->
 			<!-- TODO: WHY: if we remove this, mobile popup behavior gets screwed -->
 			<!-- <script src="js/shooting-stars.js" type="text/javascript"></script> -->
 
