--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 								class="fab fa-youtube" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<li><a href="https://t.me/FantasiaMoney" target="_blank" value="StbTgChat"
-								title="TelegramChat">FantasiaMoney <i class="fab fa-telegram-plane" style="padding-bottom: 10px;"></i></i></a>
+								title="TelegramChat">TG Chat <i class="fab fa-telegram-plane" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<br>
 						</ul>
