--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 														<!-- <br> -->
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improve ve(3,3) & the OHM bond model</div>
 														<br>
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Tokens for the people, first. OccupyDeFi<br><br>Feb 18 Fair Launch</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Tokens for the people, first. OccupyDeFi<br><br>Fair Launch, Feb 18</div>
 														<!-- <div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 20px">Bonus for early buys on days 1-4:</div>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 20px">100% 75% 50% 25%</div>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 15px">Bonus given on month 4</div> -->
