--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 												<div class="banner-header-title">
 													<div class="banner-main-top">
 														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 1;"
-															data-wow-duration="2s">DeFi 3.0</h1>
+															data-wow-duration="2s">DeFi 3.0 Ecosystem</h1>
 															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
 														<!-- <h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 1;"
@@ -139,9 +139,10 @@
 															<!-- Simpli<span class="Textfadehome" >fied</span> in  -->
 															In One <span class="Textfadehome">Click</span></h2>
 														<!-- <br> -->
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improve ve(3,3) & the OHM bond model</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improved OHM bond model</div>
 														<br>
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Tokens for people. OccupyDeFi<br><br>Fair Launch, Feb 28</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Fair Launch, Feb 28</div>
+														<!-- <div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Tokens for people. OccupyDeFi<br><br>Fair Launch, Feb 28</div> -->
 														<!-- <div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 20px">Bonus for early buys on days 1-4:</div>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 20px">100% 75% 50% 25%</div>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 15px">Bonus given on month 4</div> -->
