--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 															Uni<span class="Textfadehome fied">fied</span> in One
 															<span class="Textfadehome coinn">Coin</span>
 														</h2> -->
-														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1;">
+														<h2 id="inOneClick" class="text-white font-lg2 wow fadeInUp" style="line-height: 1; margin-top:-20px;">
 															<!-- Simpli<span class="Textfadehome" >fied</span> in  -->
 															In One <span class="Textfadehome">Click</span></h2>
 														<!-- <br> -->
