--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Rover</title>
-	<meta name="title" content="Rover" />
-	<meta name="description" content="Rover" />
+	<title>FantasiaMoney</title>
+	<meta name="title" content="FantasiaMoney" />
+	<meta name="description" content="FantasiaMoney" />
 	<meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
-	<meta name="keywords" content="Rover" />
+	<meta name="keywords" content="FantasiaMoney" />
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="mobile-web-app-capable" content="yes" />
