--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 							<li><a href="https://github.com/RoverCapital/ROVER-FETCH-PRODUCTION" target="_blank" value="StbGithub"
 								title="Github">Github<i class="fab fa-github" style="padding-bottom: 10px;"></i></i></a></li>
 							</li>
-							<li><a href="https://www.reddit.com/r/RoverCapital" target="_blank" value="StbReddit"
+							<li><a href="https://www.reddit.com/r/FantasiaMoney" target="_blank" value="StbReddit"
 								title="Reddit">Reddit <i class="fab fa-reddit" style="padding-bottom: 10px;"></i></i></a>
 							</li>
 							<li><a href="https://FantasiaMoney.medium.com/" target="_blank" value="StbMedium"
