--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 												<div class="banner-header-title">
 													<div class="banner-main-top">
 														<h1 id="allDefi" class="text-white font-lg wow fadeInUp backInUp" style="line-height: 1;"
-															data-wow-duration="2s">DeFi 3.0 Ecosystem</h1>
+															data-wow-duration="2s">DeFi 3.0 & NFT Metaverse</h1>
 															<!-- data-wow-duration="2s">All DeFi<br>& NFT Earnings + Reflection</h1> -->
 
 														<!-- <h2 id="inOneCoin" class="text-white font-lg2  wow fadeInUp for-leter-space" style="line-height: 1;"
@@ -139,7 +139,7 @@
 															<!-- Simpli<span class="Textfadehome" >fied</span> in  -->
 															In One <span class="Textfadehome">Click</span></h2>
 														<!-- <br> -->
-														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improved OHM bond model</div>
+														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Improve ve3 & the OHM bond model</div>
 														<br>
 														<div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Fair Launch, Feb 28</div>
 														<!-- <div class="text-white font-lg2 wow fadeInUp" style="line-height: 1; font-size: 25px">Tokens for people. OccupyDeFi<br><br>Fair Launch, Feb 28</div> -->
